# Fortuna

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ASSUMPTIONS.md  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  FINAL_REPORT.md  GAPS.md  NORTH_STAR.md  PROMPT.md  README.md  STANDARDS.md  STATE.md  canon.manifest  operator.md  rust-toolchain.toml
crates/fortuna-backtest/: Cargo.toml
crates/fortuna-backtest/src/: asof.rs  edge_provider.rs  harness.rs  lib.rs  manifest.rs  records.rs  source.rs  sweep.rs
crates/fortuna-backtest/tests/: aeolus_archive.rs  backtest_dst.rs  decoupling.rs  gdead.rs  gpit.rs  harness.rs  records.proptest-regressions  records.rs  sweep.rs  validate_real_edges.rs
crates/fortuna-cli/: Cargo.toml
crates/fortuna-cli/src/: backtest_cmd.rs  doctor.rs  lib.rs  main.rs
crates/fortuna-cli/tests/: backtest_cli.rs  cli_integration.rs  doctor.rs  paper_demo.rs
crates/fortuna-cognition/: Cargo.toml
crates/fortuna-cognition/src/: aeolus_beliefs.rs  aeolus_buckets.rs  aeolus_dedup.rs  aeolus_forecast.rs  aeolus_match.rs  aeolus_reliability.rs  aeolus_resolve.rs  basis.rs  basis_v2.rs  beliefs.rs  calibration.rs  context.rs  cycle.rs  discovery.rs  events.rs  funding_baselines.rs  lib.rs  mind.rs  persona.rs  persona_beliefs.rs  persona_metrics.rs  persona_orchestrator.rs  persona_runner.rs  persona_scoring.rs  persona_trigger.rs  reconciliation.rs  review.rs  scalar_beliefs.rs  scorecard_agg.rs  scoring.rs  shadow.rs  signals.rs  veto.rs
crates/fortuna-cognition/tests/: aeolus_beliefs.rs  aeolus_buckets.rs  aeolus_dedup.rs  aeolus_forecast.rs  aeolus_match.rs  aeolus_reliability.rs  aeolus_resolve.rs  basis.rs  basis_live_fixture.rs  beliefs.rs  calibration.rs  context.rs  cycle.rs  discovery.rs  events.rs  mind.rs  persona.rs  persona_beliefs.rs  persona_dst.rs  persona_live_smoke.rs  persona_macro.rs  persona_metrics.rs  persona_orchestrator.rs  persona_orchestrator_dst.rs  persona_runner.rs  persona_scoring.rs  persona_trigger.rs  reconciliation.rs  review.rs  scalar_beliefs.rs  scorecard_agg.rs  scoring.proptest-regressions  scoring.rs  shadow.rs  signals.rs  veto.rs
crates/fortuna-core/: Cargo.toml
crates/fortuna-core/dst-corpus/: README.md  anchor-31337.seed  anchor-777.seed  anchor-8675309.seed  paper-live-through-not-touch.seed  perp-curve-exceeded-11819682492387934495.seed  perp-event-basis-fee-trap-boundary.seed  perp_event_basis_sum_order_boundary.seed
crates/fortuna-core/src/: book.rs  bus.rs  clock.rs  ids.rs  lib.rs  market.rs  money.rs  perp.rs
crates/fortuna-core/tests/: bus.rs  clock.rs  dst.rs  funding_window.rs  ids.rs  market.rs  money.rs  perp.rs
crates/fortuna-exec/: Cargo.toml
crates/fortuna-exec/src/: flatten.rs  group.rs  journal.rs  lib.rs  manager.rs
crates/fortuna-exec/tests/: groups_flatten.rs  manager.rs
crates/fortuna-gates/: Cargo.toml
crates/fortuna-gates/src/: config.rs  halt.rs  lib.rs  order.rs  perp.rs  pipeline.rs  rate.rs
crates/fortuna-gates/tests/: perp_gates.rs  pipeline.rs  properties.proptest-regressions  properties.rs
crates/fortuna-invariants/: Cargo.toml
crates/fortuna-invariants/src/: lib.rs
crates/fortuna-invariants/tests/: README.md  i1_universal_gate.rs  i2_drawdown_human_rearm.rs  i3_runaway_halt.rs  i4_killswitch_independence.rs  i4_killswitch_revocation.rs  i5_all_append_only_tables.rs  i5_audit_append_only.rs  i6_persona_propose_only.rs  i6_propose_only_mind.rs  i7_promotion_gates.rs  i_decoupling_spine.rs  i_paper_live_no_real_order.rs  perp_i1_sealed_order.rs  perp_i2_drawdown_extension.rs  perp_i3_cross_domain_halt.rs  perp_i4_flatten_seal.rs  s2_money_type_integrity.rs  s3_clock_only_determinism.rs
crates/fortuna-killswitch/: Cargo.toml
crates/fortuna-killswitch/src/: lib.rs  main.rs
crates/fortuna-killswitch/tests/: flatten.rs  kalshi_freeze.rs  kalshi_live_wiring.rs  revocation_guard.rs
crates/fortuna-ledger/: Cargo.toml
crates/fortuna-ledger/.sqlx/: query-0176213a059c06461b455a77eef9845e30cf0975abae1aec03ebccfc46b23531.json  query-021e2684aaa98310463cc63ed80e0390a97874578ad26734f158b34b10b53137.json  query-11ceefee45d932c4a803fca4b154fd507d7da9aaca2a13cc977db5707969353e.json  query-1c9e95d7ae7991796d5aeb79a29255a7b83aea396b3a22c1d970f8cdb7991f8a.json  query-2363b247dd0a900f224bdbd649345aeb99c233ec58b9c4cb81d5616fd54d7126.json  query-2c3c15dbcc39c443e2fd131a3355ef02b3251509df44644cc4004e7512e825c2.json  query-2ff5d682fabd3f3386e12692059bfe557fa31d4e805697450d345fcb37830c15.json  query-3215b5d2066bf809e1ab89a8c0bc6b530ec250c6277244d6f88a19c56be8c759.json  query-3312ff45dbca6b5a2ec35ab0e90d0ce74640cfb8c47866f79fa2214a247534fd.json  query-3646a7aaf16fd486445bd269416cb840a73637de4b061fc72e317894fb4b849c.json  query-3777d0e52efec5bf01617e1639c28de6501b3370283e584c7a227e523323738d.json  query-39fe7016677b6871e4ec799c10f773cb76e1aa4af8896998d821ccad903271af.json  query-3b8f0aaf05064eb75eb23a431db665520f99f78f2cfe920f6ec8a4c28a9c5b79.json  query-414341f9be30fdc799c7fffb84aa3d37810d3a8f692c56b187114afc55378833.json  query-426966564c41b405f5fc2933a3b579037e48efa5fc33f60e90847029ac17111f.json  query-44e163a331a8c4376a48310b2f9bd34f2fd3b7688dc9079a9706ed1c86764cfa.json  query-48bf4e153af9502ea4240149c04108356938eaeea6a43b5170dd8ee6691e0a6e.json  query-4e3495c19a9422eb3eb78d867d28ac25f2240d9643d64393ee7498f7379cc416.json  query-57e1e7c0ad1a3233de0ad3fef99f006b5f8a736146ea722fe454c795031701ff.json  query-599984301e3c4c066be51496bfa2d7f438b4103ced4cd1eccdbec9cff88b5e00.json  query-618432a197cea274e5cfab0df8b706d08c434566e5c110b7c11d52f79492501b.json  query-67a11efe3d70ae781024ba921da297ce45c5dd202fdece370c8143f5ee985a66.json  (+28 more)
crates/fortuna-ledger/migrations/: 20260609000001_initial.sql  (+10 more)
crates/fortuna-live/: Cargo.toml
crates/fortuna-ops/: Cargo.toml
crates/fortuna-paper/: Cargo.toml
crates/fortuna-runner/: Cargo.toml
crates/fortuna-sources/: Cargo.toml
crates/fortuna-state/: Cargo.toml
crates/fortuna-venues/: Cargo.toml
docs/deuce/: .env.example  README.md  pyproject.toml
docs/heater/: .env.example  README.md  pyproject.toml
(+1066 files in other folders)
