[workspace]
resolver = "2"
members = [
  "crates/fortuna-core",
  "crates/fortuna-gates",
  "crates/fortuna-exec",
  "crates/fortuna-state",
  "crates/fortuna-venues",
  "crates/fortuna-ledger",
  "crates/fortuna-cognition",
  "crates/fortuna-ops",
  "crates/fortuna-invariants",
  "crates/fortuna-killswitch",
  "crates/fortuna-cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
ulid = "1"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
proptest = "1"
rand = { version = "0.8", features = ["small_rng"] }
