[package]
name = "fortuna-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "fortuna_cli"
path = "src/lib.rs"

[[bin]]
name = "fortuna"
path = "src/main.rs"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-gates = { path = "../fortuna-gates" }
# W4: start paper-demo writes the boot pointer via fortuna_live::boot.
# No cycle: fortuna-live does NOT depend on fortuna-cli.
fortuna-live = { path = "../fortuna-live" }
fortuna-ledger = { path = "../fortuna-ledger" }
fortuna-ops = { path = "../fortuna-ops" }
# S7: backtest/validate commands wire the replay harness + sweep machinery.
# No cycle: fortuna-backtest depends on ledger/scoring/cognition, NOT on cli.
fortuna-backtest = { path = "../fortuna-backtest" }
# S7: used in test helpers (fixture_as_real_file) via transitively available
# bundled rusqlite from fortuna-backtest. Pulled here explicitly so the
# fortuna-cli test file can call rusqlite::Connection directly.
rusqlite = { version = "0.32", features = ["bundled"] }
fortuna-scoring = { path = "../fortuna-scoring" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Raw-value read of config-on-disk for `status` (A6): FortunaConfig
# deliberately drops [daemon] (the daemon owns that section), so the venue
# line needs a plain toml::Value pass. Workspace-pinned dep, ledgered as a
# deviation from design Section 6 in GAPS.md.
toml = { workspace = true }
# W3 doctor: source-reachability probe (network-gated behind --offline flag).
reqwest = { workspace = true }
# W3 doctor: dynamic query probes (SELECT 1, _sqlx_migrations). fortuna-ledger
# already brings sqlx transitively; explicit dep here so doctor.rs can call
# sqlx::query / sqlx::query_scalar in non-test code.
sqlx = { workspace = true }

[dev-dependencies]
# W4: paper_demo.rs uses fortuna-live types (ExecutionMode, write_demo_db_pointer)
# + the GuardedTransport pattern (fortuna-venues KalshiTransport).
# No cycle: fortuna-live does NOT depend on fortuna-cli.
fortuna-live = { path = "../fortuna-live" }
fortuna-venues = { path = "../fortuna-venues" }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
