[package]
name = "fortuna-cognition"
version = "0.1.0"
edition = "2021"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-scoring = { path = "../fortuna-scoring" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
