[package]
name = "fortuna-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
fortuna-venues = { path = "../fortuna-venues" }
futures = { workspace = true }
toml = { workspace = true }

[[test]]
name = "dst"
harness = false
