[package]
name = "fortuna-gates"
version = "0.1.0"
edition = "2021"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
toml = { workspace = true }
fortuna-venues = { path = "../fortuna-venues" }
