[package]
name = "fortuna-invariants"
version = "0.1.0"
edition = "2021"

# PROTECTED CRATE - see CLAUDE.md. Assertion logic in tests/ may be added to,
# never weakened, renamed, or removed.

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-gates = { path = "../fortuna-gates" }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
fortuna-venues = { path = "../fortuna-venues" }
fortuna-state = { path = "../fortuna-state" }
futures = { workspace = true }
toml = { workspace = true }
