[package]
name = "fortuna-invariants"
version = "0.1.0"
edition = "2021"

# PROTECTED CRATE - see CLAUDE.md. Assertion logic in tests/ may be added to,
# never weakened, renamed, or removed.

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-gates = { path = "../fortuna-gates" }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
fortuna-venues = { path = "../fortuna-venues" }
fortuna-state = { path = "../fortuna-state" }
fortuna-ledger = { path = "../fortuna-ledger" }
fortuna-killswitch = { path = "../fortuna-killswitch" }
fortuna-cognition = { path = "../fortuna-cognition" }
fortuna-runner = { path = "../fortuna-runner" }
fortuna-exec = { path = "../fortuna-exec" }
# I4 revocation invariant (C2): exercises the RevocationHaltPoller wrapper that
# CONSUMES the killswitch sentinel. DEV-only — it does not enter the killswitch's
# own dependency graph (i4_killswitch_independence walks fortuna-killswitch's
# NORMAL deps, which are unchanged).
fortuna-live = { path = "../fortuna-live" }
async-trait = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
