[package]
name = "fortuna-killswitch"
version = "0.1.0"
edition = "2021"

# I4 STRUCTURAL INDEPENDENCE: this crate must NEVER depend on
# fortuna-ledger, sqlx, Postgres, the cognition runtime, or the event loop.
# It must function when nothing else is alive. The i4 invariant test
# asserts this dependency boundary mechanically.

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-venues = { path = "../fortuna-venues" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
# I4-safe: tokio is NOT in the i4 forbidden set (sqlx/tokio-postgres/postgres/
# fortuna-ledger/fortuna-cognition) and is ALREADY transitive via fortuna-venues.
# The live `freeze --venue kalshi` path drives ReqwestKalshiTransport's async
# reqwest on a SELF-SPUN current-thread runtime (a one-shot reactor for the HTTP
# cancels — NOT the daemon's event loop): "tokio for IO at the edges". The sim
# self-test stays on futures::block_on. i4_killswitch_independence stays green.
tokio = { workspace = true }

[dev-dependencies]
