[package]
name = "fortuna-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-venues = { path = "../fortuna-venues" }
fortuna-exec = { path = "../fortuna-exec" }
fortuna-gates = { path = "../fortuna-gates" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }
fortuna-cognition = { path = "../fortuna-cognition" }
