[package]
name = "fortuna-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-venues = { path = "../fortuna-venues" }
fortuna-exec = { path = "../fortuna-exec" }
fortuna-gates = { path = "../fortuna-gates" }
# WS2 S6b: the pure Scorecard type for the append-only scorecards snapshot store.
# fortuna-scoring depends on nothing but std+serde+thiserror (no cycle).
fortuna-scoring = { path = "../fortuna-scoring" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }
fortuna-cognition = { path = "../fortuna-cognition" }
# dev-only: the e2e grades a RECORDED NWS CLI product through the real F2 grader
# (no cycle — fortuna-sources depends on cognition+core, not ledger).
fortuna-sources = { path = "../fortuna-sources" }
