[package]
name = "fortuna-live"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
fortuna-core = { path = "../fortuna-core" }
fortuna-cognition = { path = "../fortuna-cognition" }
fortuna-exec = { path = "../fortuna-exec" }
fortuna-gates = { path = "../fortuna-gates" }
# I4 revocation sentinel (C2): fortuna-live CONSUMES the kill sentinel the
# standalone killswitch writes (RevocationHaltPoller in run_loop.rs). This is a
# one-way edge — fortuna-live -> fortuna-killswitch — and does NOT touch the
# killswitch's OWN dependency graph (the i4_killswitch_independence dep-walk
# inspects fortuna-killswitch's normal deps, not its consumers).
fortuna-killswitch = { path = "../fortuna-killswitch" }
fortuna-ledger = { path = "../fortuna-ledger" }
fortuna-ops = { path = "../fortuna-ops" }
fortuna-paper = { path = "../fortuna-paper" }
fortuna-runner = { path = "../fortuna-runner" }
fortuna-sources = { path = "../fortuna-sources" }
fortuna-state = { path = "../fortuna-state" }
fortuna-venues = { path = "../fortuna-venues" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
dotenvy = "0.15.7"

[dev-dependencies]
async-trait.workspace = true
futures = { workspace = true }

[[bin]]
name = "fortuna-live"
path = "src/main.rs"
