[package]
name = "fortuna-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-gates = { path = "../fortuna-gates" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
