[package]
name = "fortuna-sources"
version = "0.1.0"
edition = "2021"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
