[package]
name = "fortuna-state"
version = "0.1.0"
edition = "2021"

[dependencies]
fortuna-core = { path = "../fortuna-core" }
fortuna-venues = { path = "../fortuna-venues" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
